Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-116398

widget gallery crashes with surfacegraph

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.6.1, 6.7.0 FF
    • 6.6, 6.7
    • Graphs: 3D
    • None
    • 715684686 (dev), 7fe0ccc1a (6.6)

    Description

      Select item -> slice row -> select point -> crash

       

      Datavis also seems to work differently
      select item -> slice row -> immediately shows slice view

      Attachments

        For Gerrit Dashboard: QTBUG-116398
        # Subject Branch Project Status CR V

        Activity

          People

            oulu_hillbilly Sami Varanka
            oulu_hillbilly Sami Varanka
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes